Corrected formatting on view/index

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Products#index</h1>
-<p>Find me in app/views/products/index.html.erb</p>
+<h1>Products </h1>
+<%= link_to "Add Product", new_product_url %>
+
+
+<% @products.each do |product| %>
+<ul>
+  <li><%= product.name %></li>
+  <li><%= product.description %></li>
+  <li><%= product.price_in_cents %></li>
+</ul>
+<% end %>
