--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,7 @@
-<h1>Products#show</h1>
+<h1>All Products</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Back', products_path %>
 
 <%= @product.formatted_price%>
