Adding authorization to ensure users are logged in before they create reviews

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,6 +6,6 @@
 <ul>
   <li><%= product.name %></li>
   <li><%= product.description %></li>
-  <li><%= product.price_in_cents %></li>
+  <li>&cent;<%= product.price_in_cents %></li>
 </ul>
 <% end %>
