--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,7 +13,7 @@ $<%= @product.formatted_price%>
      <%= review.comment %>
      <br>
      <% if review.user != nil %>
-       <em> by <%= review.user.email %></em>
+       <em> by <%= review.user.name %></em>
        Added on: <%= review.created_at %>
      <% end %>
    </p>
